# xmsgridtrace

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  Setup.bat  SetupCpp2013Debug.bat  SetupCpp2015Debug.bat  Setup_cpp.bat  Setup_py.bat  Test_py.bat  _doxygen_mainpage_8md_source.html  _gridtrace___tutorial_8md_source.html  _xm_grid_trace_8cpp.html  _xm_grid_trace_8cpp.js  _xm_grid_trace_8cpp_source.html  _xm_grid_trace_8h.html  _xm_grid_trace_8h_source.html  _xm_grid_trace_8t_8h.html  _xm_grid_trace_8t_8h_source.html  annotated.html  annotated.js  annotated_dup.js  build.py  class_xm_grid_trace_unit_tests-members.html  class_xm_grid_trace_unit_tests.html  class_xm_grid_trace_unit_tests.js  classes.html  classxms_1_1_xm_grid_trace-members.html  classxms_1_1_xm_grid_trace.html  classxms_1_1_xm_grid_trace.js  classxms_1_1_xm_grid_trace_impl-members.html  classxms_1_1_xm_grid_trace_impl.html  classxms_1_1_xm_grid_trace_impl.js  conanfile.py  condabuildinfo.cmake  dir_cca3fbda72add2535b500d82f826dca9.html  dir_cca3fbda72add2535b500d82f826dca9.js  dir_f2a7c4785167a03acdea84e289101f3f.html  dir_f2a7c4785167a03acdea84e289101f3f.js  (+22 more)
Doxygen/: Doxyfile  DoxygenMainpage.md  Extractor_Tutorial.md  Gridtrace_Tutorial.md  xmsgridtrace.tag
build_py/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  xmsgridtrace.sln  xmsgridtrace.vcxproj  xmsgridtrace.vcxproj.filters  xmsgridtrace_py.vcxproj  xmsgridtrace_py.vcxproj.filters
build_py/lib/: xmsgridtrace_py.exp
build_py/x64/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
build_py/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
build_py/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build_py/xmsgridtrace.dir/Release/xmsgridtrace.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
build_py/xmsgridtrace_py.dir/Release/: xmsgridtrace_py.vcxprojResolveAssemblyReference.cache
build_py/xmsgridtrace_py.dir/Release/xmsgridtrace_py.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  xmsgridtrace_py.write.1u.tlog
dev/: Test_py.bat  setenv.bat  setenv.sh  xmsprofile_2013debug  xmsprofile_2013release  xmsprofile_py  xmsprofile_release  xmsprofile_release_py
examples/: GridtraceTutorial.html  gridtrace_tools.py  particle_trace_data.py  xms.yml
pydocs/: .buildinfo  genindex.html  getting_started.html  gettingstarted.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
pydocs/.doctrees/: environment.pickle  getting_started.doctree  index.doctree  modules.doctree
pydocs/.doctrees/modules/gridtrace/: GridTrace.doctree  XmGridTrace.doctree
pydocs/_sources/: getting_started.rst.txt  index.rst.txt  modules.rst.txt
pydocs/_sources/modules/gridtrace/: XmGridTrace.rst.txt
pydocs/modules/gridtrace/: GridTrace.html  XmGridTrace.html
pydocs/source/: conf.py  index.rst  modules.rst
pydocs/source/modules/gridtrace/: XmGridTrace.rst
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  (+72 more)
xmsgridtrace/gridtrace/: XmGridTrace.cpp  XmGridTrace.h  XmGridTrace.t.h  XmUGrid2dDataExtractor.cpp  XmUGrid2dDataExtractor.h  XmUGrid2dPolylineDataExtractor.cpp  XmUGrid2dPolylineDataExtractor.h  XmUGridTriangles2d.cpp  XmUGridTriangles2d.h
xmsgridtrace/python/: xmsgridtrace_py.cpp
xmsgridtrace/python/extractor/: XmGridTrace_py.cpp  gridtrace_py.cpp  gridtrace_py.h
xmsgridtrace/python/gridtrace/: XmGridTrace_py.cpp  XmGridTrace_pyt.py  XmUGrid2dDataExtractor_py.cpp  XmUGrid2dPolylineDataExtractor_py.cpp  XmUGrid2dPolylineDataExtractor_pyt.py  extractor_py.cpp
